chore: sentry - add tunnel
Ref: https://docs.sentry.io/platforms/javascript/troubleshooting/

--- a/apps/evm/vercel.json
+++ b/apps/evm/vercel.json
@@ -11,6 +11,10 @@
       "destination": "/api/geoblock.js"
     },
     {
+      "source": "/tunnel",
+      "destination": "/api/sentry.js"
+    },
+    {
       "source": "/(api|onramp-api|btc-api)/(.*)",
       "destination": "/api"
     },
