chore: update example env file

--- a/apps/evm/.env.example
+++ b/apps/evm/.env.example
@@ -2,7 +2,7 @@ VITE_API_URL=""
 VITE_L1_CHAIN_NAME="sepolia"
 VITE_COINGECKO_API_KEY=
 VITE_DISPLAY_TVL_FEATURE=enabled
-VITE_MARKET_DATA_API="/pricefeed"
+VITE_MARKET_DATA_API="/marketdata/v1"
 VITE_GEOBLOCK_ENABLED=false
 VITE_ONRAMP_API_URL="https://onramp-api-testnet.gobob.xyz"
 VITE_BTC_API_URL="https://btc-testnet.gobob.xyz"
