--- a/apps/evm/.env.example
+++ b/apps/evm/.env.example
@@ -10,3 +10,9 @@ VITE_FEATURE_FLAG_BTC_ONRAMP=disabled
 VITE_INDEXER_BRIDGE_URL=""
 VITE_SENTRY_URL=""
 VITE_SENTRY_AUTH_TOKEN=""
+
+
+/* MAINNET */
+VITE_ONRAMP_API_URL="https://onramp-api-mainnet.gobob.xyz"
+VITE_BTC_API_URL="https://btc-mainnet.gobob.xyz"
+VITE_L1_CHAIN_NAME="ethereum"
