--- a/apps/evm/package.json
+++ b/apps/evm/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@eth-optimism/sdk": "^3.1.6",
     "@ethersproject/providers": "^5.7.2",
+    "@gobob/bob-sdk": "1.3.0",
     "@gobob/chains": "workspace:^",
     "@gobob/connect-ui": "workspace:^",
     "@gobob/currency": "workspace:^",
