--- a/apps/evm/.env.example
+++ b/apps/evm/.env.example
@@ -9,8 +9,7 @@ VITE_BTC_API_URL="https://btc-testnet.gobob.xyz"
 VITE_FEATURE_FLAG_BTC_ONRAMP=disabled
 VITE_INDEXER_BRIDGE_URL=""
 VITE_SENTRY_URL=""
-VITE_SENTRY_AUTH_TOKEN=""
-
+SENTRY_AUTH_TOKEN=""
 
 /* MAINNET */
 VITE_ONRAMP_API_URL="https://onramp-api-mainnet.gobob.xyz"
