--- a/apps/hybrid-pay/.env.example
+++ b/apps/hybrid-pay/.env.example
@@ -6,6 +6,7 @@ VITE_MARKET_DATA_API="/marketdata/v1"
 VITE_GEOBLOCK_ENABLED=false
 VITE_ONRAMP_API_URL="https://onramp-api-testnet.gobob.xyz"
 VITE_BTC_API_URL="https://btc-testnet.gobob.xyz"
+VITE_FUSION_API='http://localhost:4000'
 VITE_FEATURE_FLAG_BTC_ONRAMP=disabled
 VITE_INDEXER_BRIDGE_URL=""
 VITE_SENTRY_URL=""
