--- a/apps/hybrid-pay/package.json
+++ b/apps/hybrid-pay/package.json
@@ -30,7 +30,10 @@
     "@gobob/ui": "workspace:^",
     "@gobob/utils": "workspace:^",
     "@gobob/wagmi": "workspace:^",
+    "@react-aria/tag": "^3.4.1",
     "@react-aria/utils": "^3.23.2",
+    "@react-stately/collections": "^3.10.0",
+    "@react-stately/list": "^3.9.1",
     "@sentry/react": "^8.8.0",
     "@sentry/vite-plugin": "^2.18.0",
     "@zerodev/sdk": "^5.3.3",
@@ -38,6 +41,7 @@
     "permissionless": "^0.1.36",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-qr-code": "^2.0.12",
     "react-router-dom": "^6.16.0",
     "styled-components": "^6.0.8",
     "viem": "^2.17.3",
