--- a/apps/hybrid-pay/package.json
+++ b/apps/hybrid-pay/package.json
@@ -38,6 +38,8 @@
     "@sentry/vite-plugin": "^2.18.0",
     "@zerodev/sdk": "^5.3.3",
     "big.js": "^6.2.1",
+    "date-fns": "^3.2.0",
+    "graphql-request": "6.1.0",
     "permissionless": "^0.1.36",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
