--- a/apps/hybrid-pay/package.json
+++ b/apps/hybrid-pay/package.json
@@ -13,11 +13,11 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@dynamic-labs/bitcoin": "^2.2.10",
-    "@dynamic-labs/ethereum": "^2.2.10",
-    "@dynamic-labs/ethereum-aa": "^2.2.10",
-    "@dynamic-labs/sdk-react-core": "^2.2.10",
-    "@dynamic-labs/wagmi-connector": "^2.2.10",
+    "@dynamic-labs/bitcoin": "^v3.0.0-alpha.22",
+    "@dynamic-labs/ethereum": "^v3.0.0-alpha.22",
+    "@dynamic-labs/ethereum-aa": "^v3.0.0-alpha.22",
+    "@dynamic-labs/sdk-react-core": "^v3.0.0-alpha.22",
+    "@dynamic-labs/wagmi-connector": "^v3.0.0-alpha.22",
     "@esbuild-plugins/node-globals-polyfill": "^0.2.3",
     "@esbuild-plugins/node-modules-polyfill": "^0.2.2",
     "@gobob/chains": "workspace:^",
@@ -36,7 +36,7 @@
     "@react-stately/list": "^3.9.1",
     "@sentry/react": "^8.8.0",
     "@sentry/vite-plugin": "^2.18.0",
-    "@zerodev/sdk": "^5.3.3",
+    "@zerodev/sdk": "^5.3.4",
     "big.js": "^6.2.1",
     "date-fns": "^3.2.0",
     "graphql-request": "6.1.0",
