--- a/apps/hybrid-pay/package.json
+++ b/apps/hybrid-pay/package.json
@@ -44,6 +44,7 @@
     "react-dom": "^18.2.0",
     "react-qr-code": "^2.0.12",
     "react-router-dom": "^6.16.0",
+    "react-use": "^17.5.1",
     "styled-components": "^6.0.8",
     "viem": "^2.17.3",
     "wagmi": "^2.8.1",
