--- a/apps/hybrid-pay/package.json
+++ b/apps/hybrid-pay/package.json
@@ -13,10 +13,10 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@dynamic-labs/ethereum": "^v3.0.0-alpha.24",
-    "@dynamic-labs/ethereum-aa": "^v3.0.0-alpha.24",
-    "@dynamic-labs/sdk-react-core": "^v3.0.0-alpha.24",
-    "@dynamic-labs/wagmi-connector": "^v3.0.0-alpha.24",
+    "@dynamic-labs/ethereum": "v3.0.0-alpha.22",
+    "@dynamic-labs/ethereum-aa": "v3.0.0-alpha.22",
+    "@dynamic-labs/sdk-react-core": "v3.0.0-alpha.22",
+    "@dynamic-labs/wagmi-connector": "v3.0.0-alpha.22",
     "@esbuild-plugins/node-globals-polyfill": "^0.2.3",
     "@esbuild-plugins/node-modules-polyfill": "^0.2.2",
     "@gobob/chains": "workspace:^",
@@ -39,14 +39,14 @@
     "big.js": "^6.2.1",
     "date-fns": "^3.2.0",
     "graphql-request": "6.1.0",
-    "permissionless": "^0.1.41",
+    "permissionless": "0.1.20",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-qr-code": "^2.0.12",
     "react-router-dom": "^6.16.0",
     "react-use": "^17.5.1",
     "styled-components": "^6.0.8",
-    "viem": "^2.17.3",
+    "viem": "2.9.25",
     "wagmi": "^2.8.1",
     "yup": "^0.32.11"
   },
