--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -38,6 +38,8 @@
     "postpack": "clean-package restore"
   },
   "dependencies": {
+    "@gobob/currency": "workspace:^",
+    "@internationalized/number": "^3.2.1",
     "@radix-ui/react-slot": "^1.0.2",
     "@react-aria/accordion": "3.0.0-alpha.20",
     "@react-aria/breadcrumbs": "^3.5.4",
@@ -70,12 +72,11 @@
     "@react-stately/toggle": "^3.6.1",
     "@react-stately/tooltip": "^3.4.3",
     "@react-stately/tree": "^3.7.1",
-    "react-transition-group": "^4.4.5",
-    "@internationalized/number": "^3.2.1",
     "decimal.js-light": "^2.5.1",
     "formik": "^2.4.5",
-    "react-use": "^17.4.0",
-    "react-toastify": "^10.0.5"
+    "react-toastify": "^10.0.5",
+    "react-transition-group": "^4.4.5",
+    "react-use": "^17.4.0"
   },
   "peerDependencies": {
     "react": ">=18",
@@ -83,6 +84,7 @@
     "styled-components": ">=6.0.0"
   },
   "devDependencies": {
+    "@gobob/test-utils": "workspace:^",
     "@react-types/grid": "^3.2.0",
     "@react-types/shared": "^3.19.0",
     "@react-types/tabs": "^3.3.2",
@@ -91,7 +93,6 @@
     "clean-package": "^2.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "styled-components": "^6.0.7",
-    "@gobob/test-utils": "workspace:^"
+    "styled-components": "^6.0.7"
   }
 }
