--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -76,7 +76,8 @@
     "formik": "^2.4.5",
     "react-toastify": "^10.0.5",
     "react-transition-group": "^4.4.5",
-    "react-use": "^17.4.0"
+    "react-use": "^17.4.0",
+    "scroll-into-view-if-needed": "^3.1.0"
   },
   "peerDependencies": {
     "react": ">=18",
