--- a/apps/evm/package.json
+++ b/apps/evm/package.json
@@ -27,6 +27,7 @@
     "@gobob/ui": "workspace:^",
     "@gobob/utils": "workspace:^",
     "@gobob/wagmi": "workspace:^",
+    "@react-aria/interactions": "^3.17.0",
     "@react-aria/label": "^3.7.6",
     "@react-aria/utils": "^3.23.2",
     "@sentry/react": "^8.15.0",
@@ -39,6 +40,7 @@
     "graphql-request": "^6.1.0",
     "i18next": "^23.10.1",
     "i18next-browser-languagedetector": "^7.2.0",
+    "lottie-react": "^2.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^14.1.0",
