--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -74,6 +74,7 @@
     "@react-stately/tree": "^3.7.1",
     "decimal.js-light": "^2.5.1",
     "formik": "^2.4.5",
+    "react-loading-skeleton": "^3.4.0",
     "react-toastify": "^10.0.5",
     "react-transition-group": "^4.4.5",
     "react-use": "^17.4.0",
