--- a/apps/evm/.env.example
+++ b/apps/evm/.env.example
@@ -4,13 +4,13 @@ VITE_COINGECKO_API_KEY=
 VITE_DISPLAY_TVL_FEATURE=enabled
 VITE_MARKET_DATA_API="/marketdata/v1"
 VITE_GEOBLOCK_ENABLED=false
-VITE_ONRAMP_API_URL="https://onramp-api-testnet.gobob.xyz"
+VITE_GATEWAY_API_URL="https://gateway-api-testnet.gobob.xyz"
 VITE_BTC_API_URL="https://btc-testnet.gobob.xyz"
-VITE_FEATURE_FLAG_BTC_ONRAMP=disabled
+VITE_FEATURE_FLAG_BTC_GATEWAY=disabled
 VITE_INDEXER_BRIDGE_URL=""
 VITE_SENTRY_URL=""
 
 /* MAINNET */
-VITE_ONRAMP_API_URL="https://onramp-api-mainnet.gobob.xyz"
+VITE_GATEWAY_API_URL="https://gateway-api-mainnet.gobob.xyz"
 VITE_BTC_API_URL="https://btc-mainnet.gobob.xyz"
 VITE_L1_CHAIN_NAME="ethereum"
