--- a/apps/evm/vercel.json
+++ b/apps/evm/vercel.json
@@ -19,7 +19,7 @@
       "destination": "/api/marketdata.js"
     },
     {
-      "source": "/(api|onramp-api|btc-api)/(.*)",
+      "source": "/(api|gateway-api|btc-api)/(.*)",
       "destination": "/api"
     },
     {
