--- a/packages/sats-wagmi/package.json
+++ b/packages/sats-wagmi/package.json
@@ -32,32 +32,7 @@
     "clean": "rimraf dist .turbo",
     "typecheck": "tsc --noEmit"
   },
-  "peerDependencies": {
-    "react": ">=18",
-    "react-dom": ">=18"
-  },
-  "devDependencies": {
-    "@gobob/types": "workspace:^",
-    "@types/async-retry": "^1.4.8",
-    "@types/bs58check": "^2.1.2",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
-  },
   "dependencies": {
-    "@bitcoin-js/tiny-secp256k1-asmjs": "^2.2.3",
-    "@gobob/bob-sdk": "^2.2.1",
-    "@gobob/react-query": "workspace:^",
-    "@gobob/types": "workspace:^",
-    "@gobob/utils": "workspace:^",
-    "@metamask/providers": "^12.0.0",
-    "@scure/base": "^1.1.6",
-    "@scure/btc-signer": "^1.3.1",
-    "async-retry": "^1.3.3",
-    "bip32": "^4.0.0",
-    "bitcoin-address-validation": "^2.2.1",
-    "bitcoinjs-lib": "^6.1.5",
-    "bs58check": "^2.1.2",
-    "sats-connect": "^1.1.2",
-    "@uidotdev/usehooks": "^2.4.1"
+    "@gobob/sats-wagmi": "^0.2.4"
   }
 }
