refactor(evm): apps page

--- a/apps/evm/package.json
+++ b/apps/evm/package.json
@@ -27,6 +27,8 @@
     "@gobob/ui": "workspace:^",
     "@gobob/utils": "workspace:^",
     "@gobob/wagmi": "workspace:^",
+    "@react-aria/button": "^3.8.1",
+    "@react-aria/focus": "^3.14.0",
     "@react-aria/interactions": "^3.17.0",
     "@react-aria/label": "^3.7.6",
     "@react-aria/utils": "^3.23.2",
@@ -35,7 +37,6 @@
     "@types/react-slick": "^0.23.13",
     "@uidotdev/usehooks": "^2.4.1",
     "big.js": "^6.2.1",
-    "countup.js": "^2.8.0",
     "date-fns": "^3.2.0",
     "graphql-request": "^6.1.0",
     "i18next": "^23.10.1",
