--- a/apps/evm/package.json
+++ b/apps/evm/package.json
@@ -37,6 +37,7 @@
     "@types/react-slick": "^0.23.13",
     "@uidotdev/usehooks": "^2.4.1",
     "big.js": "^6.2.1",
+    "countup.js": "^2.8.0",
     "date-fns": "^3.2.0",
     "graphql-request": "^6.1.0",
     "i18next": "^23.10.1",
