--- a/apps/evm/tsconfig.json
+++ b/apps/evm/tsconfig.json
@@ -20,6 +20,6 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true
   },
-  "include": ["src", "sentry.ts"],
+  "include": ["src", "sentry.ts", "src/pages/FusionS3/components/Leaderboard/.tsx"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
