--- a/apps/evm/package.json
+++ b/apps/evm/package.json
@@ -32,6 +32,7 @@
     "@react-aria/utils": "^3.23.2",
     "@sentry/react": "^8.15.0",
     "@sentry/vite-plugin": "^2.20.1",
+    "@types/luxon": "^3.4.2",
     "@types/react-slick": "^0.23.13",
     "@uidotdev/usehooks": "^2.4.1",
     "big.js": "^6.2.1",
@@ -40,6 +41,7 @@
     "graphql-request": "^6.1.0",
     "i18next": "^23.10.1",
     "i18next-browser-languagedetector": "^7.2.0",
+    "luxon": "^3.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^14.1.0",
