feat(evm): add barometer

--- a/packages/tokens/package.json
+++ b/packages/tokens/package.json
@@ -32,6 +32,7 @@
   },
   "dependencies": {
     "@gobob/chains": "workspace:^",
-    "@gobob/currency": "workspace:^"
+    "@gobob/currency": "workspace:^",
+    "@gobob/sats-wagmi": "0.3.2"
   }
 }
