refactor(evm): sign-up flow

--- a/packages/tokens/package.json
+++ b/packages/tokens/package.json
@@ -32,7 +32,6 @@
   },
   "dependencies": {
     "@gobob/chains": "workspace:^",
-    "@gobob/currency": "workspace:^",
-    "@gobob/sats-wagmi": "0.3.2"
+    "@gobob/currency": "workspace:^"
   }
 }
