--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -32,14 +32,9 @@
     "test": "vitest run test/*.ts"
   },
   "devDependencies": {
-    "@gobob/types": "workspace:^",
     "vitest": "^1.5.2"
   },
   "dependencies": {
-    "@gobob/bob-sdk": "^1.3.0",
-    "@scure/base": "^1.1.6",
-    "@scure/btc-signer": "^1.3.1",
-    "bitcoin-address-validation": "^2.2.3",
-    "bitcoinjs-lib": "^6.1.5"
+    "bitcoin-address-validation": "^2.2.3"
   }
 }
