fix(evm): improvements

--- a/apps/evm/package.json
+++ b/apps/evm/package.json
@@ -52,6 +52,7 @@
     "siwe": "^2.1.4",
     "slick-carousel": "^1.8.1",
     "styled-components": "^6.0.8",
+    "use-count-up": "^3.0.1",
     "viem": "^2.10.2",
     "yup": "^0.32.11"
   },
