--- a/apps/evm/api/package.json
+++ b/apps/evm/api/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@vercel/kv": "^2.0.0",
     "http-proxy-middleware": "^3.0.0"
   }
 }
