--- a/apps/evm/.env.example
+++ b/apps/evm/.env.example
@@ -7,6 +7,7 @@ VITE_GEOBLOCK_ENABLED=false
 VITE_GATEWAY_API_URL="https://gateway-api-testnet.gobob.xyz"
 VITE_BTC_API_URL="https://btc-testnet.gobob.xyz"
 VITE_FEATURE_FLAG_BTC_GATEWAY=disabled
+VITE_FEATURE_FLAG_WALLET=disabled
 VITE_INDEXER_BRIDGE_URL=""
 VITE_SENTRY_URL=""
 
