--- a/packages/tokens/package.json
+++ b/packages/tokens/package.json
@@ -33,6 +33,6 @@
   "dependencies": {
     "@gobob/chains": "workspace:^",
     "@gobob/currency": "workspace:^",
-    "common-tokens": "git+https://github.com/bob-collective/ethereum-optimism.github.io#master"
+    "tokenlist": "git+https://github.com/bob-collective/ethereum-optimism.github.io#feat/tokens"
   }
 }
