--- a/turbo.json
+++ b/turbo.json
@@ -2,6 +2,10 @@
   "$schema": "https://turbo.build/schema.json",
   "globalDependencies": ["**/.env.*local"],
   "tasks": {
+    "install": {
+      "outputs": [],
+      "cache": false
+    },
     "build": {
       "outputs": ["dist/**", "storybook-static/**"],
       "dependsOn": ["^build"],
