--- a/apps/evm/package.json
+++ b/apps/evm/package.json
@@ -68,7 +68,6 @@
     "eslint": "^8.45.0",
     "vite": "^4.4.5",
     "vite-plugin-node-polyfills": "^0.15.0",
-    "vite-plugin-wasm": "^3.3.0",
-    "vitest": "^2.1.1"
+    "vite-plugin-wasm": "^3.3.0"
   }
 }
