--- a/apps/evm/package.json
+++ b/apps/evm/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "test": "vitest",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
@@ -58,11 +59,13 @@
   },
   "devDependencies": {
     "@gobob/test-utils": "workspace:^",
+    "@testing-library/react-hooks": "^8.0.1",
     "@types/big.js": "^6.2.0",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@vitejs/plugin-react": "^4.0.3",
     "eslint": "^8.45.0",
+    "jsdom": "^25.0.1",
     "vite": "^4.4.5",
     "vite-plugin-node-polyfills": "^0.15.0",
     "vite-plugin-wasm": "^3.3.0"
