Revert "Sync tokens with json config (#187)"
This reverts commit 18c923ba5853b883413dead93243ac36aa1a2a77.

--- a/packages/tokens/package.json
+++ b/packages/tokens/package.json
@@ -32,7 +32,6 @@
   },
   "dependencies": {
     "@gobob/chains": "workspace:^",
-    "@gobob/currency": "workspace:^",
-    "tokenlist": "git+https://github.com/bob-collective/ethereum-optimism.github.io#master"
+    "@gobob/currency": "workspace:^"
   }
 }
