fix: apply condiftional check if token not present

--- a/packages/tokens/package.json
+++ b/packages/tokens/package.json
@@ -32,6 +32,7 @@
   },
   "dependencies": {
     "@gobob/chains": "workspace:^",
-    "@gobob/currency": "workspace:^"
+    "@gobob/currency": "workspace:^",
+    "tokenlist": "github:bob-collective/ethereum-optimism.github.io#master"
   }
 }
