--- a/apps/evm2/package.json
+++ b/apps/evm2/package.json
@@ -36,10 +36,11 @@
     "countup.js": "^2.8.0",
     "date-fns": "^3.2.0",
     "graphql-request": "^6.1.0",
-    "i18next": "^23.11.5",
-    "i18next-browser-languagedetector": "^7.2.0",
+    "i18next": "^23.15.1",
+    "i18next-browser-languagedetector": "^8.0.0",
     "next": "14.2.13",
     "next-i18next": "^15.3.1",
+    "next-intl": "^3.20.0",
     "pino-pretty": "^11.2.2",
     "react": "^18",
     "react-dom": "^18",
