--- a/apps/evm2/package.json
+++ b/apps/evm2/package.json
@@ -36,15 +36,11 @@
     "countup.js": "^2.8.0",
     "date-fns": "^3.2.0",
     "graphql-request": "^6.1.0",
-    "i18next": "^23.15.1",
-    "i18next-browser-languagedetector": "^8.0.0",
     "next": "14.2.13",
-    "next-i18next": "^15.3.1",
     "next-intl": "^3.20.0",
     "pino-pretty": "^11.2.2",
     "react": "^18",
     "react-dom": "^18",
-    "react-i18next": "^14.1.2",
     "react-otp-input": "^3.1.1",
     "react-qr-code": "^2.0.12",
     "react-slick": "^0.30.2",
@@ -60,12 +56,8 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "@vitejs/plugin-react": "^4.0.3",
     "eslint": "^8",
     "eslint-config-next": "14.2.13",
-    "typescript": "^5",
-    "vite": "^4.4.5",
-    "vite-plugin-node-polyfills": "^0.15.0",
-    "vite-plugin-wasm": "^3.3.0"
+    "typescript": "^5"
   }
 }
