--- a/apps/evm2/package.json
+++ b/apps/evm2/package.json
@@ -33,18 +33,15 @@
     "@react-aria/label": "^3.7.6",
     "@react-aria/utils": "^3.23.2",
     "@sentry/nextjs": "^8.30.0",
-    "@sentry/vite-plugin": "^2.20.1",
     "@types/react-slick": "^0.23.13",
     "@uidotdev/usehooks": "^2.4.1",
     "@vitejs/plugin-react": "^4.0.3",
     "big.js": "^6.2.1",
-    "countup.js": "^2.8.0",
     "date-fns": "^3.2.0",
     "graphql-request": "^6.1.0",
     "lottie-react": "^2.4.0",
     "next": "14.2.13",
     "next-intl": "^3.20.0",
-    "pino-pretty": "^11.2.2",
     "react": "^18",
     "react-dom": "^18",
     "react-otp-input": "^3.1.1",
@@ -66,6 +63,7 @@
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.2.13",
+    "jsdom": "^25.0.1",
     "typescript": "^5"
   }
 }
