chore: fix types

--- a/apps/evm2/package.json
+++ b/apps/evm2/package.json
@@ -33,9 +33,7 @@
     "@react-aria/label": "^3.7.6",
     "@react-aria/utils": "^3.23.2",
     "@sentry/nextjs": "^8.30.0",
-    "@types/react-slick": "^0.23.13",
     "@uidotdev/usehooks": "^2.4.1",
-    "@vitejs/plugin-react": "^4.0.3",
     "big.js": "^6.2.1",
     "date-fns": "^3.2.0",
     "graphql-request": "^6.1.0",
@@ -57,10 +55,13 @@
   "devDependencies": {
     "@gobob/test-utils": "workspace:^",
     "@testing-library/react-hooks": "^8.0.1",
+    "@testing-library/dom": "^10.4.0",
     "@types/big.js": "^6.2.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-slick": "^0.23.13",
+    "@vitejs/plugin-react": "^4.0.3",
     "eslint": "^8",
     "eslint-config-next": "14.2.13",
     "jsdom": "^25.0.1",
