--- a/apps/evm2/package.json
+++ b/apps/evm2/package.json
@@ -7,7 +7,7 @@
     "test": "vitest",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint --report-unused-disable-directives --max-warnings 0",
+    "lint": "next lint --max-warnings 0",
     "format:check": "prettier --check src/** --cache",
     "format:write": "prettier --write src/** --cache",
     "typecheck": "tsc --noEmit"
