fix: ssr build with new sats wagmi lib

--- a/apps/evm2/package.json
+++ b/apps/evm2/package.json
@@ -33,12 +33,11 @@
     "@react-aria/label": "^3.7.6",
     "@react-aria/utils": "^3.23.2",
     "@sentry/nextjs": "^8.30.0",
-    "@uidotdev/usehooks": "^2.4.1",
     "big.js": "^6.2.1",
     "date-fns": "^3.2.0",
     "graphql-request": "^6.1.0",
     "lottie-react": "^2.4.0",
-    "next": "14.2.13",
+    "next": "^14.2.15",
     "next-intl": "^3.20.0",
     "react": "^18",
     "react-dom": "^18",
