--- a/packages/connect-ui/package.json
+++ b/packages/connect-ui/package.json
@@ -53,6 +53,7 @@
     "@gobob/ui": "workspace:^",
     "@react-aria/utils": "^3.21.0",
     "react-jazzicon": "^1.0.4",
-    "react-use": "^17.4.3"
+    "react-use": "^17.4.3",
+    "usehooks-ts": "^3.1.0"
   }
 }
