feat(evm): add transaction placeholder

--- a/apps/evm/.env.example
+++ b/apps/evm/.env.example
@@ -1,17 +1,26 @@
-VITE_API_URL=""
-VITE_L1_CHAIN_NAME="sepolia"
+/* COMMON */
+VITE_API_URL="https://fusion-api.gobob.xyz/"
+
 VITE_COINGECKO_API_KEY=
-VITE_DISPLAY_TVL_FEATURE=enabled
-VITE_MARKET_DATA_API="/marketdata/v1"
+VITE_MARKET_DATA_API="/api/pricefeed"
+
+VITE_FEATURE_FLAG_BTC_GATEWAY=enabled
+
 VITE_GEOBLOCK_ENABLED=false
-VITE_GATEWAY_API_URL="https://gateway-api-testnet.gobob.xyz"
-VITE_BTC_API_URL="https://btc-testnet.gobob.xyz"
-VITE_FEATURE_FLAG_BTC_GATEWAY=disabled
-VITE_FEATURE_FLAG_WALLET=disabled
-VITE_INDEXER_BRIDGE_URL=""
-VITE_SENTRY_URL=""
+
+VITE_INDEXER_URL="https://api.goldsky.com/api/public/project_clto8zgmd1jbw01xig1ge1u0h/subgraphs"
+
+VITE_SENTRY_AUTH_TOKEN=
+VITE_SENTRY_URL="https://0dad0fac367fac3e4fbc85d33b24f65f@o4504853415329792.ingest.us.sentry.io/4507407322316800"
 
 /* MAINNET */
 VITE_GATEWAY_API_URL="https://gateway-api-mainnet.gobob.xyz"
 VITE_BTC_API_URL="https://btc-mainnet.gobob.xyz"
-VITE_L1_CHAIN_NAME="ethereum"
+VITE_L1_CHAIN="1"
+VITE_L2_CHAIN="60808"
+
+/* TESTNET */
+VITE_GATEWAY_API_URL="https://gateway-api-testnet.gobob.xyz"
+VITE_BTC_API_URL="https://btc-testnet.gobob.xyz"
+VITE_L1_CHAIN="11155111"
+VITE_L2_CHAIN="808813"
