chore: set middleware matchers

--- a/apps/evm-next/package.json
+++ b/apps/evm-next/package.json
@@ -45,17 +45,18 @@
     "next": "^14.2.15",
     "react": "^18",
     "react-dom": "^18",
+    "react-jazzicon": "^1.0.4",
     "react-otp-input": "^3.1.1",
     "react-qr-code": "^2.0.12",
     "react-slick": "^0.30.2",
+    "sharp": "^0.33.5",
     "siwe": "^2.1.4",
     "slick-carousel": "^1.8.1",
     "styled-components": "^6.0.8",
     "use-count-up": "^3.0.1",
     "usehooks-ts": "^3.1.0",
     "viem": "^2.10.2",
-    "yup": "^0.32.11",
-    "react-jazzicon": "^1.0.4"
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@gobob/test-utils": "workspace:^",
@@ -63,7 +64,7 @@
     "@lingui/conf": "^4.11.0",
     "@lingui/loader": "^4.11.0",
     "@lingui/macro": "^4.11.0",
-    "@lingui/swc-plugin": "4.0.7",
+    "@lingui/swc-plugin": "4.0.8",
     "@testing-library/react-hooks": "^8.0.1",
     "@types/big.js": "^6.2.0",
     "@types/negotiator": "^0.6.3",
