chore(evm): improve dev speed

--- a/apps/evm/package.json
+++ b/apps/evm/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbo",
     "test": "vitest",
     "prebuild": "lingui compile",
     "build": "next build",
@@ -46,12 +46,11 @@
     "react": "^18",
     "react-dom": "^18",
     "react-jazzicon": "^1.0.4",
+    "react-multi-carousel": "^2.8.5",
     "react-otp-input": "^3.1.1",
     "react-qr-code": "^2.0.12",
-    "react-slick": "^0.30.2",
     "sharp": "^0.33.5",
     "siwe": "^2.1.4",
-    "slick-carousel": "^1.8.1",
     "styled-components": "^6.0.8",
     "use-count-up": "^3.0.1",
     "usehooks-ts": "^3.1.0",
@@ -71,7 +70,6 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "@types/react-slick": "^0.23.13",
     "@vitejs/plugin-react": "^4.0.3",
     "eslint": "^8",
     "eslint-config-next": "14.2.13",
