chore: set scalable lottery banner + all images blur

--- a/apps/evm/tsconfig.json
+++ b/apps/evm/tsconfig.json
@@ -25,7 +25,8 @@
       }
     ],
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["./src/*"],
+      "@public/*": ["./public/*"]
     },
     "noUncheckedIndexedAccess": true,
     "forceConsistentCasingInFileNames": true
