fix: nextjs missing routes-manifest.json

--- a/turbo.json
+++ b/turbo.json
@@ -3,7 +3,7 @@
   "globalDependencies": ["**/.env.*local"],
   "tasks": {
     "build": {
-      "outputs": ["dist/**", "storybook-static/**"],
+      "outputs": [".next/**", "!.next/cache/**", "storybook-static/**"],
       "dependsOn": ["^build"],
       "cache": true
     },
