chore: add more tests for tokens

--- a/packages/tokens/package.json
+++ b/packages/tokens/package.json
@@ -28,7 +28,8 @@
     "lint": "eslint .",
     "lint:fix": "eslint . --ext ts,tsx --fix",
     "clean": "rimraf dist .turbo",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "test": "vitest"
   },
   "dependencies": {
     "@gobob/chains": "workspace:^",
