--- a/apps/evm/package.json
+++ b/apps/evm/package.json
@@ -37,6 +37,7 @@
     "@react-aria/label": "^3.7.6",
     "@react-aria/utils": "^3.23.2",
     "@sentry/nextjs": "^8.30.0",
+    "@tanstack/react-store": "^0.5.6",
     "big.js": "^6.2.1",
     "date-fns": "^3.2.0",
     "graphql-request": "^6.1.0",
