--- a/apps/evm/.eslintrc.json
+++ b/apps/evm/.eslintrc.json
@@ -1,3 +1,3 @@
 {
-  "extends": ["next/core-web-vitals", "next/typescript", "../../.eslintrc.json"]
+  "extends": ["next/core-web-vitals", "next/typescript", "plugin:lingui/recommended", "../../.eslintrc.json"]
 }
