--- a/apps/e2e/package.json
+++ b/apps/e2e/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "description": "Bob UI library.",
   "homepage": "https://github.com/bob-collective/bob-ui#readme",
+  "type": "module",
   "license": "MIT",
   "keywords": [
     "bob",
@@ -30,13 +31,26 @@
   },
   "scripts": {
     "synpress:run": "synpress run",
+    "build:cache": "synpress",
+    "build:cache:force": "synpress --force",
+    "build:cache:headless": "synpress --headless",
+    "serve:test-dapp": "serve node_modules/@metamask/test-dapp/dist -p 9999",
+    "test:playwright:headful": "playwright test",
+    "test:playwright:headless": "HEADLESS=true playwright test",
+    "test:playwright:headless:ui": "HEADLESS=true playwright test --ui",
     "lint": "eslint .",
     "lint:fix": "eslint . --ext ts,tsx --fix"
   },
+  "dependencies": {
+    "@playwright/test": "1.44.0",
+    "@synthetixio/synpress": "4.0.0-alpha.9",
+    "@synthetixio/synpress-cache": "0.0.1-alpha.9",
+    "dotenv": "16.4.2"
+  },
   "devDependencies": {
-    "@synthetixio/synpress": "3.7.2-beta.9",
-    "@testing-library/cypress": "^10.0.1",
-    "cypress": "^13.6.0",
-    "cypress-wait-until": "^2.0.1"
+    "@metamask/test-dapp": "8.1.0",
+    "@synthetixio/synpress-tsconfig": "0.0.1-alpha.9",
+    "@types/node": "20.11.17",
+    "serve": "14.2.1"
   }
 }
