--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "build:sb": "storybook build",
     "test": "vitest run && jest --verbose --config ./jest.config.js packages/ui",
     "start:evm": "pnpm run --filter bob-evm dev --port 5050",
-    "test:e2e": "start-server-and-test 'pnpm start:bridge' http-get://localhost:3000 'cd apps/e2e && pnpm synpress:run'",
-    "test:e2e:ci": "cd apps/e2e && pnpm synpress:run",
+    "test:e2e": "pnpm start:evm && pnpm run --filter bob-e2e test:playwright:headful",
+    "test:e2e:ci": "pnpm run --filter bob-e2e test:playwright:headless",
     "postinstall": "husky install",
     "clean": "pnpm turbo:clean && pnpm clean:jest && pnpm clean:node-modules && pnpm clean:lock && pnpm install",
     "clean:node-modules": "rimraf ./packages/**/**/node_modules && rimraf ./apps/**/node_modules && rm -rf ./node_modules",
@@ -74,7 +74,6 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "rimraf": "^5.0.7",
-    "start-server-and-test": "^2.0.3",
     "storybook": "^7.6.19",
     "turbo": "latest",
     "typescript": "5.4.5",
