--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,9 +15,8 @@
     "esModuleInterop": true,
     "resolveJsonModule": true,
     "allowSyntheticDefaultImports": true,
-    "downlevelIteration": true,
-    "types": ["@testing-library/jest-dom"]
+    "downlevelIteration": true
   },
-  "include": ["packages", "apps", "scripts/setup-test.ts"],
+  "include": ["packages", "apps"],
   "exclude": ["**/node_modules", "**/dist", "**/.turbo"]
 }
