chore: add vitest for evm

--- a/apps/evm/package.json
+++ b/apps/evm/package.json
@@ -74,6 +74,7 @@
     "eslint-config-next": "14.2.13",
     "eslint-plugin-lingui": "^0.6.0",
     "jsdom": "^25.0.1",
-    "typescript": "^5"
+    "typescript": "^5",
+    "vitest": "^2.1.1"
   }
 }
