--- a/apps/bob-pay/package.json
+++ b/apps/bob-pay/package.json
@@ -42,6 +42,7 @@
     "@react-stately/list": "^3.9.1",
     "@sentry/nextjs": "^8.30.0",
     "@tanstack/react-store": "^0.5.6",
+    "@vercel/kv": "^3.0.0",
     "@yudiel/react-qr-scanner": "^2.0.4",
     "@zerodev/sdk": "^5.3.4",
     "auth": "^1.2.3",
@@ -69,6 +70,7 @@
     "@lingui/loader": "^4.11.0",
     "@lingui/macro": "^4.11.0",
     "@lingui/swc-plugin": "4.0.8",
+    "@next/bundle-analyzer": "^15.0.2",
     "@testing-library/react-hooks": "^8.0.1",
     "@types/big.js": "^6.2.0",
     "@types/jsonwebtoken": "^9.0.7",
