--- a/apps/bob-pay/package.json
+++ b/apps/bob-pay/package.json
@@ -61,6 +61,7 @@
     "styled-components": "^6.0.8",
     "usehooks-ts": "^3.1.0",
     "viem": "^2.21.35",
+    "wagmi": "^2.8.1",
     "yup": "^0.32.11"
   },
   "devDependencies": {
