--- a/apps/bob-pay/.env.test
+++ b/apps/bob-pay/.env.test
@@ -1,6 +1,5 @@
 NEXT_PUBLIC_CHAIN_ID="60808"
-NEXT_PUBLIC_MARKET_DATA_API="/api/marketdata"
-NEXT_PUBLIC_API_URL='https://app.gobob.xyz/api'
+NEXT_PUBLIC_FUSION_API_URL='https://app.gobob.xyz/api'
 
 NEXT_PUBLIC_DYNAMIC_API_URL="https://app.dynamicauth.com/api/v0"
 NEXT_PUBLIC_DYNAMIC_ENVIRONMENT_ID="413f32d0-261e-49a1-9f2d-0ee3676c42ab"
