--- a/apps/evm/package.json
+++ b/apps/evm/package.json
@@ -36,6 +36,7 @@
     "@react-aria/interactions": "^3.21.3",
     "@react-aria/label": "^3.7.6",
     "@react-aria/utils": "^3.23.2",
+    "@vercel/kv": "^3.0.0",
     "@sentry/nextjs": "^8.30.0",
     "@tanstack/react-store": "^0.5.6",
     "big.js": "^6.2.1",
