--- a/package.json
+++ b/package.json
@@ -27,9 +27,7 @@
     "clean:lock": "rm ./pnpm-lock.yaml",
     "turbo:clean": "turbo clean && rimraf ./node_modules/.cache/turbo",
     "turbo:graph": "pnpm build --graph=dependency-graph.png",
-    "lingui:extract": "lingui extract",
-    "lingui:extract:evm": "pnpm run --filter bob-evm lingui:extract",
-    "lingui:extract:bob-pay": "pnpm run --filter bob-pay lingui:extract"
+    "lingui:extract": "lingui extract"
   },
   "devDependencies": {
     "@lingui/cli": "^4.11.0",
