--- a/apps/bob-pay/package.json
+++ b/apps/bob-pay/package.json
@@ -35,6 +35,7 @@
     "@react-stately/collections": "^3.10.0",
     "@react-stately/list": "^3.9.1",
     "@vercel/kv": "^3.0.0",
+    "@sentry/nextjs": "^8.30.0",
     "@yudiel/react-qr-scanner": "^2.0.4",
     "@zerodev/sdk": "^5.3.4",
     "big.js": "^6.2.1",
