--- a/apps/evm/.env.example
+++ b/apps/evm/.env.example
@@ -1,5 +1,5 @@
 NEXT_PUBLIC_FUSION_API_URL=https://fusion-api.gobob.xyz/
-NEXT_PUBLIC_COINGECKO_API_KEY=
+NEXT_COINGECKO_API_KEY=
 NEXT_PUBLIC_GEOBLOCK_ENABLED=false
 NEXT_PUBLIC_INDEXER_URL="https://api.goldsky.com/api/public/project_clto8zgmd1jbw01xig1ge1u0h/subgraphs"
 
