--- a/apps/evm/.env.test
+++ b/apps/evm/.env.test
@@ -3,7 +3,7 @@ NEXT_PUBLIC_GATEWAY_API_URL=
 NEXT_PUBLIC_BTC_API_URL=
 NEXT_PUBLIC_L1_CHAIN="11155111"
 NEXT_PUBLIC_L2_CHAIN="808813"
-NEXT_PUBLIC_COINGECKO_API_KEY=
+NEXT_COINGECKO_API_KEY=
 NEXT_PUBLIC_GEOBLOCK_ENABLED=false
 NEXT_PUBLIC_FEATURE_FLAG_WALLET=enabled
 NEXT_PUBLIC_INDEXER_URL=
