fix: use nextjs api routes and update env variables (#291)

--- a/apps/evm/.env.example
+++ b/apps/evm/.env.example
@@ -1,13 +1,28 @@
-NEXT_PUBLIC_API_URL=https://fusion-api.gobob.xyz/
-NEXT_PUBLIC_GATEWAY_API_URL=https://gateway-api-testnet.gobob.xyz/
-NEXT_PUBLIC_BTC_API_URL=https://btc-testnet.gobob.xyz/
-NEXT_PUBLIC_L1_CHAIN=11155111
-NEXT_PUBLIC_L2_CHAIN=808813
-NEXT_PUBLIC_COINGECKO_API_KEY=
-NEXT_PUBLIC_MARKET_DATA_API=/api/pricefeed
+NEXT_PUBLIC_FUSION_API_URL=https://fusion-api.gobob.xyz/
+NEXT_COINGECKO_API_KEY=
 NEXT_PUBLIC_GEOBLOCK_ENABLED=false
-NEXT_PUBLIC_FEATURE_FLAG_BTC_GATEWAY=enabled
-NEXT_PUBLIC_INDEXER_URL=
+NEXT_PUBLIC_INDEXER_URL="https://api.goldsky.com/api/public/project_clto8zgmd1jbw01xig1ge1u0h/subgraphs"
+
 NEXT_PUBLIC_SENTRY_AUTH_TOKEN=
 NEXT_PUBLIC_SENTRY_URL=
 NEXT_PUBLIC_TRACES_SAMPLE_RATE=0.5
+
+# SEPOLIA
+NEXT_PUBLIC_L1_CHAIN="11155111"
+NEXT_PUBLIC_L2_CHAIN="808813"
+
+# MAINNET 
+NEXT_PUBLIC_L1_CHAIN="1"
+NEXT_PUBLIC_L2_CHAIN="60808"
+
+# GATEWAY TESTNET
+NEXT_PUBLIC_GATEWAY_API_URL=https://gateway-api-testnet.gobob.xyz/
+NEXT_PUBLIC_BTC_API_URL=https://btc-testnet.gobob.xyz/
+
+# GATEWAY MAINNET
+NEXT_PUBLIC_GATEWAY_API_URL="https://gateway-api-mainnet.gobob.xyz"
+NEXT_PUBLIC_BTC_API_URL="https://btc-mainnet.gobob.xyz"
+
+# REDIS CACHE
+KV_REST_API_URL="https://communal-hen-23354.upstash.io"
+KV_REST_API_TOKEN=
