--- a/apps/evm/.env.test
+++ b/apps/evm/.env.test
@@ -9,5 +9,7 @@ NEXT_PUBLIC_FEATURE_FLAG_WALLET=enabled
 NEXT_PUBLIC_INDEXER_URL=
 NEXT_PUBLIC_SENTRY_AUTH_TOKEN=
 NEXT_PUBLIC_SENTRY_URL=
+NEXT_PUBLIC_GTM_ID=
+NEXT_PUBLIC_GA_ID=
 KV_REST_API_URL=
 KV_REST_API_TOKEN=
