--- a/apps/evm/.env.example
+++ b/apps/evm/.env.example
@@ -23,6 +23,10 @@ NEXT_PUBLIC_BTC_API_URL=https://btc-testnet.gobob.xyz/
 NEXT_PUBLIC_GATEWAY_API_URL="https://gateway-api-mainnet.gobob.xyz"
 NEXT_PUBLIC_BTC_API_URL="https://btc-mainnet.gobob.xyz"
 
+# ANALYTICS
+NEXT_PUBLIC_GTM_ID=
+NEXT_PUBLIC_GA_ID=
+
 # REDIS CACHE
 KV_REST_API_URL="https://communal-hen-23354.upstash.io"
 KV_REST_API_TOKEN=
