--- a/turbo.json
+++ b/turbo.json
@@ -4,33 +4,29 @@
   "tasks": {
     "build": {
       "outputs": [".next/**", "!.next/cache/**", "storybook-static/**"],
-      "dependsOn": ["^build"],
-      "cache": true
+      "dependsOn": ["^build"]
     },
     "lint": {
       "outputs": [],
-      "cache": true,
-      "dependsOn": ["^lint"]
+      "cache": false
     },
     "dev": {
-      "cache": false,
-      "persistent": true
+      "cache": false
     },
     "clean": {
       "cache": false
     },
     "typecheck": {
-      "cache": true,
+      "cache": false,
       "dependsOn": ["^typecheck"]
     },
     "test": {
       "dependsOn": ["build"],
-      "outputs": [],
-      "cache": true
+      "outputs": []
     },
     "format:check": {
       "outputs": [],
-      "cache": true
+      "cache": false
     },
     "format:write": {
       "outputs": [],
@@ -38,7 +34,7 @@
     },
     "files:check": {
       "outputs": [],
-      "cache": true
+      "cache": false
     }
   }
 }
