--- a/apps/evm/package.json
+++ b/apps/evm/package.json
@@ -36,9 +36,9 @@
     "@react-aria/interactions": "^3.21.3",
     "@react-aria/label": "^3.7.6",
     "@react-aria/utils": "^3.23.2",
-    "@vercel/kv": "^3.0.0",
     "@sentry/nextjs": "^8.30.0",
     "@tanstack/react-store": "^0.5.6",
+    "@vercel/kv": "^3.0.0",
     "big.js": "^6.2.1",
     "date-fns": "^3.2.0",
     "graphql-request": "^6.1.0",
@@ -46,6 +46,7 @@
     "negotiator": "^0.6.3",
     "next": "^14.2.15",
     "react": "^18",
+    "react-calendly": "^4.3.1",
     "react-dom": "^18",
     "react-jazzicon": "^1.0.4",
     "react-multi-carousel": "^2.8.5",
