--- a/apps/evm/package.json
+++ b/apps/evm/package.json
@@ -19,10 +19,10 @@
     "@binance/w3w-wagmi-connector-v2": "1.2.4-alpha.0",
     "@gobob/bob-sdk": "^3.1.0",
     "@dynamic-labs/bitcoin": "^3.6.2",
-    "@dynamic-labs/ethereum": "^v3.0.0-alpha.29",
+    "@dynamic-labs/ethereum": "^3.6.2",
     "@dynamic-labs/iconic": "^3.6.2",
-    "@dynamic-labs/sdk-react-core": "^v3.0.0-alpha.29",
-    "@dynamic-labs/wagmi-connector": "^v3.0.0-alpha.29",
+    "@dynamic-labs/sdk-react-core": "^3.6.2",
+    "@dynamic-labs/wagmi-connector": "^3.6.2",
     "@eth-optimism/sdk": "^3.1.6",
     "@ethersproject/providers": "^5.7.2",
     "@gobob/chains": "workspace:^",
