--- a/apps/evm/package.json
+++ b/apps/evm/package.json
@@ -16,6 +16,7 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@eth-optimism/op-app": "^0.0.1",
     "@eth-optimism/sdk": "^3.1.6",
     "@ethersproject/providers": "^5.7.2",
     "@gobob/bob-sdk": "^3.0.0",
@@ -36,15 +37,16 @@
     "@react-aria/interactions": "^3.21.3",
     "@react-aria/label": "^3.7.6",
     "@react-aria/utils": "^3.23.2",
-    "@vercel/kv": "^3.0.0",
     "@sentry/nextjs": "^8.30.0",
     "@tanstack/react-store": "^0.5.6",
+    "@vercel/kv": "^3.0.0",
     "big.js": "^6.2.1",
     "date-fns": "^3.2.0",
     "graphql-request": "^6.1.0",
     "lottie-react": "^2.4.0",
     "negotiator": "^0.6.3",
     "next": "^14.2.15",
+    "op-wagmi": "^1.0.0",
     "react": "^18",
     "react-dom": "^18",
     "react-jazzicon": "^1.0.4",
