--- a/apps/evm/.env.example
+++ b/apps/evm/.env.example
@@ -3,7 +3,6 @@ NEXT_COINGECKO_API_KEY=
 NEXT_PUBLIC_GEOBLOCK_ENABLED=false
 NEXT_PUBLIC_INDEXER_URL="https://api.goldsky.com/api/public/project_clto8zgmd1jbw01xig1ge1u0h/subgraphs"
 
-NEXT_PUBLIC_SENTRY_AUTH_TOKEN=
 NEXT_PUBLIC_SENTRY_URL=
 NEXT_PUBLIC_TRACES_SAMPLE_RATE=0.5
 
@@ -22,6 +21,9 @@ NEXT_PUBLIC_BTC_API_URL=https://btc-testnet.gobob.xyz/
 # GATEWAY MAINNET
 NEXT_PUBLIC_GATEWAY_API_URL="https://gateway-api-mainnet.gobob.xyz"
 NEXT_PUBLIC_BTC_API_URL="https://btc-mainnet.gobob.xyz"
+
+# SENTRY - SOURCE MAPS UPLOAD
+SENTRY_AUTH_TOKEN=
 
 # REDIS CACHE
 KV_REST_API_URL="https://communal-hen-23354.upstash.io"
