--- a/apps/bob-pay/.env.test
+++ b/apps/bob-pay/.env.test
@@ -13,5 +13,8 @@ NEXT_PUBLIC_INDEXER_URL="https://api.goldsky.com/api/public/project_clto8zgmd1jb
 
 NEXT_COINGECKO_API_KEY=
 
+# SENTRY - SOURCE MAPS UPLOAD
+SENTRY_AUTH_TOKEN=
+
 KV_REST_API_URL="https://communal-hen-23354.upstash.io"
 KV_REST_API_TOKEN=
