--- a/apps/e2e/package.json
+++ b/apps/e2e/package.json
@@ -33,7 +33,7 @@
     "synpress:run": "synpress run",
     "build:cache": "synpress",
     "build:cache:force": "synpress --force",
-    "build:cache:headless": "synpress --headless",
+    "build:cache:headless": "synpress --headless --force",
     "serve:test-dapp": "serve node_modules/@metamask/test-dapp/dist -p 9999",
     "test:playwright:headful": "playwright test",
     "test:playwright:headless": "HEADLESS=true playwright test",
@@ -42,15 +42,15 @@
     "lint:fix": "eslint . --ext ts,tsx --fix"
   },
   "dependencies": {
-    "@playwright/test": "^1.44.0",
-    "@synthetixio/synpress": "^4.0.0",
-    "@synthetixio/synpress-cache": "^0.0.4",
-    "dotenv": "^16.4.5"
+    "@playwright/test": "1.48.2",
+    "@synthetixio/synpress": "4.0.3",
+    "@synthetixio/synpress-cache": "0.0.4",
+    "dotenv": "16.4.5"
   },
   "devDependencies": {
-    "@metamask/test-dapp": "^8.13.0",
-    "@synthetixio/synpress-tsconfig": "^0.0.4",
-    "@types/node": "^22.9.0",
-    "serve": "^14.2.4"
+    "@metamask/test-dapp": "8.1.0",
+    "@synthetixio/synpress-tsconfig": "0.0.4",
+    "@types/node": "20.11.17",
+    "serve": "14.2.1"
   }
 }
