--- a/apps/bob-pay/package.json
+++ b/apps/bob-pay/package.json
@@ -37,7 +37,7 @@
     "@vercel/kv": "^3.0.0",
     "@wagmi/core": "^2.11.0",
     "@yudiel/react-qr-scanner": "^2.0.4",
-    "@zerodev/sdk": "^5.3.4",
+    "@zerodev/sdk": "5.3.4",
     "big.js": "^6.2.1",
     "date-fns": "^3.2.0",
     "graphql-request": "^6.1.0",
