--- a/apps/e2e/.env.example
+++ b/apps/e2e/.env.example
@@ -1,7 +1,2 @@
-SECRET_WORDS='test test test test test test test test test test test junk'
-NETWORK_NAME=bob
-RPC_URL="https://l2-fluffy-bob-7mjgi9pmtg.t.conduit.xyz"
-CHAIN_ID=901
-SYMBOL=ETH
-IS_TESTNET=true
-BLOCK_EXPLORER="https://explorerl2-fluffy-bob-7mjgi9pmtg.t.conduit.xyz"
+SEED_PHRASE='test test test test test test test test test test test junk'
+WALLET_PASSWORD='SynpressIsAwesomeNow!!!'
