--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "start:evm": "pnpm run --filter bob-evm dev --port 5050",
     "start:bob-pay": "pnpm run --filter bob-pay dev --port 5050",
     "test:e2e": "pnpm start:evm && pnpm run --filter bob-e2e test:playwright:headful",
-    "test:e2e:ci": "pnpm run --filter bob-e2e test:playwright:headless",
+    "test:e2e:ci": "pnpm run --filter bob-e2e test:playwright:headful",
+    "build:e2e:cache": "pnpm run --filter bob-e2e build:cache",
     "postinstall": "husky install",
     "clean": "pnpm turbo:clean && pnpm clean:node-modules && pnpm clean:lock && pnpm install",
     "clean:node-modules": "rimraf ./packages/**/**/node_modules && rimraf ./apps/**/node_modules && rm -rf ./node_modules",
