--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "test:e2e": "pnpm start:evm && pnpm run --filter bob-e2e test:playwright:headful",
     "test:e2e:ci": "pnpm run --filter bob-e2e test:playwright:headful",
     "build:e2e:cache": "pnpm run --filter bob-e2e build:cache",
+    "serve:test-dapp": "pnpm run --filter bob-e2e serve:test-dapp",
     "postinstall": "husky install",
     "clean": "pnpm turbo:clean && pnpm clean:node-modules && pnpm clean:lock && pnpm install",
     "clean:node-modules": "rimraf ./packages/**/**/node_modules && rimraf ./apps/**/node_modules && rm -rf ./node_modules",
