--- a/apps/bob-pay/package.json
+++ b/apps/bob-pay/package.json
@@ -26,50 +26,49 @@
     "@gobob/tokens": "workspace:^",
     "@gobob/ui": "workspace:^",
     "@gobob/utils": "workspace:^",
-    "@lingui/core": "^4.11.0",
-    "@lingui/react": "^4.11.0",
+    "@lingui/core": "catalog:",
+    "@lingui/react": "catalog:",
     "@react-aria/tag": "^3.4.7",
-    "@react-aria/utils": "^3.23.2",
-    "@react-stately/collections": "^3.10.0",
-    "@react-stately/list": "^3.9.1",
-    "@sentry/nextjs": "^8.30.0",
-    "@tanstack/react-query": "^5.35.1",
-    "@vercel/kv": "^3.0.0",
-    "@wagmi/core": "^2.11.0",
+    "@react-aria/utils": "catalog:",
+    "@react-stately/collections": "catalog:",
+    "@react-stately/list": "catalog:",
+    "@sentry/nextjs": "catalog:",
+    "@tanstack/react-query": "catalog:",
+    "@vercel/kv": "catalog:",
+    "@wagmi/core": "catalog:",
     "@yudiel/react-qr-scanner": "^2.0.4",
     "@zerodev/sdk": "^5.3.4",
-    "big.js": "^6.2.1",
-    "date-fns": "^3.2.0",
-    "graphql-request": "^6.1.0",
+    "big.js": "catalog:",
+    "date-fns": "catalog:",
+    "graphql-request": "catalog:",
     "negotiator": "^0.6.3",
-    "next": "^14.2.15",
+    "next": "catalog:",
     "permissionless": "^0.1.41",
-    "react": "^18",
-    "react-dom": "^18",
+    "react": "catalog:",
+    "react-dom": "catalog:",
     "react-qr-code": "^2.0.12",
     "sharp": "^0.33.5",
-    "styled-components": "^6.0.8",
-    "usehooks-ts": "^3.1.0",
-    "viem": "^2.21.35",
-    "wagmi": "^2.8.1",
-    "yup": "^0.32.11"
+    "styled-components": "catalog:",
+    "usehooks-ts": "catalog:",
+    "viem": "catalog:",
+    "wagmi": "catalog:",
+    "yup": "catalog:"
   },
   "devDependencies": {
-    "@lingui/cli": "^4.11.0",
-    "@lingui/conf": "^4.11.0",
-    "@lingui/loader": "^4.11.0",
-    "@lingui/macro": "^4.11.0",
-    "@lingui/swc-plugin": "4.0.8",
-    "@types/big.js": "^6.2.0",
+    "@lingui/cli": "catalog:",
+    "@lingui/conf": "catalog:",
+    "@lingui/loader": "catalog:",
+    "@lingui/macro": "catalog:",
+    "@lingui/swc-plugin": "catalog:",
+    "@types/big.js": "catalog:",
     "@types/negotiator": "^0.6.3",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "@vitejs/plugin-react": "^4.0.3",
+    "@types/node": "catalog:",
+    "@types/react": "catalog:",
+    "@types/react-dom": "catalog:",
     "eslint": "^8",
     "eslint-config-next": "14.2.13",
     "eslint-plugin-lingui": "^0.6.0",
-    "jsdom": "^25.0.1",
+    "jsdom": "catalog:",
     "typescript": "^5"
   }
 }
