--- a/apps/evm/package.json
+++ b/apps/evm/package.json
@@ -26,55 +26,55 @@
     "@gobob/tokens": "workspace:^",
     "@gobob/ui": "workspace:^",
     "@gobob/utils": "workspace:^",
-    "@lingui/core": "^4.11.0",
-    "@lingui/react": "^4.11.0",
-    "@react-aria/button": "^3.8.1",
-    "@react-aria/focus": "^3.14.0",
-    "@react-aria/interactions": "^3.21.3",
+    "@lingui/core": "catalog:",
+    "@lingui/react": "catalog:",
+    "@react-aria/button": "catalog:",
+    "@react-aria/focus": "catalog:",
+    "@react-aria/interactions": "catalog:",
     "@react-aria/label": "^3.7.6",
-    "@react-aria/utils": "^3.23.2",
-    "@sentry/nextjs": "^8.30.0",
-    "@tanstack/react-store": "^0.5.6",
-    "@tanstack/react-query": "^5.35.1",
-    "@vercel/kv": "^3.0.0",
-    "@wagmi/core": "^2.14.5",
-    "big.js": "^6.2.1",
-    "date-fns": "^3.2.0",
-    "graphql-request": "^6.1.0",
+    "@react-aria/utils": "catalog:",
+    "@sentry/nextjs": "catalog:",
+    "@tanstack/react-store": "catalog:",
+    "@tanstack/react-query": "catalog:",
+    "@vercel/kv": "catalog:",
+    "@wagmi/core": "catalog:",
+    "big.js": "catalog:",
+    "date-fns": "catalog:",
+    "graphql-request": "catalog:",
     "lottie-react": "^2.4.0",
     "negotiator": "^0.6.3",
-    "next": "^14.2.15",
-    "react": "^18",
-    "react-dom": "^18",
+    "next": "catalog:",
+    "react": "catalog:",
+    "react-dom": "catalog:",
     "react-jazzicon": "^1.0.4",
     "react-multi-carousel": "^2.8.5",
     "react-otp-input": "^3.1.1",
     "react-qr-code": "^2.0.12",
     "sharp": "^0.33.5",
     "siwe": "^2.1.4",
-    "styled-components": "^6.0.8",
+    "styled-components": "catalog:",
     "use-count-up": "^3.0.1",
-    "usehooks-ts": "^3.1.0",
-    "viem": "^2.10.2",
-    "yup": "^0.32.11",
-    "wagmi": "^2.12.30"
+    "usehooks-ts": "catalog:",
+    "viem": "catalog:",
+    "yup": "catalog:",
+    "wagmi": "catalog:"
   },
   "devDependencies": {
     "@gobob/test-utils": "workspace:^",
-    "@lingui/cli": "^4.11.0",
-    "@lingui/conf": "^4.11.0",
-    "@lingui/loader": "^4.11.0",
-    "@lingui/macro": "^4.11.0",
-    "@lingui/swc-plugin": "4.0.8",
-    "@types/big.js": "^6.2.0",
+    "@lingui/cli": "catalog:",
+    "@lingui/conf": "catalog:",
+    "@lingui/loader": "catalog:",
+    "@lingui/macro": "catalog:",
+    "@lingui/swc-plugin": "catalog:",
+    "@types/big.js": "catalog:",
     "@types/negotiator": "^0.6.3",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/node": "catalog:",
+    "@types/react": "catalog:",
+    "@types/react-dom": "catalog:",
     "eslint": "^8",
     "eslint-config-next": "14.2.13",
     "eslint-plugin-lingui": "^0.6.0",
-    "jsdom": "^25.0.1",
+    "jsdom": "catalog:",
     "typescript": "^5",
     "vitest": "^2.1.1"
   }
