--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -43,12 +43,12 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@react-aria/accordion": "3.0.0-alpha.20",
     "@react-aria/breadcrumbs": "^3.5.4",
-    "@react-aria/button": "^3.8.1",
+    "@react-aria/button": "catalog:",
     "@react-aria/dialog": "^3.5.4",
-    "@react-aria/focus": "^3.14.0",
+    "@react-aria/focus": "catalog:",
     "@react-aria/gridlist": "^3.6.0",
     "@react-aria/i18n": "^3.8.1",
-    "@react-aria/interactions": "^3.21.3",
+    "@react-aria/interactions": "catalog:",
     "@react-aria/link": "^3.5.3",
     "@react-aria/overlays": "^3.16.0",
     "@react-aria/progress": "^3.4.4",
@@ -60,10 +60,10 @@
     "@react-aria/tabs": "^3.6.2",
     "@react-aria/textfield": "^3.11.0",
     "@react-aria/tooltip": "^3.6.1",
-    "@react-aria/utils": "^3.23.2",
+    "@react-aria/utils": "catalog:",
     "@react-aria/visually-hidden": "^3.8.3",
-    "@react-stately/collections": "^3.10.0",
-    "@react-stately/list": "^3.9.1",
+    "@react-stately/collections": "catalog:",
+    "@react-stately/list": "catalog:",
     "@react-stately/overlays": "^3.6.1",
     "@react-stately/radio": "^3.10.0",
     "@react-stately/select": "^3.5.3",
@@ -81,9 +81,9 @@
     "scroll-into-view-if-needed": "^3.1.0"
   },
   "peerDependencies": {
-    "react": ">=18",
-    "react-dom": ">=18",
-    "styled-components": ">=6.0.0"
+    "react": "catalog:uiPeerDeps",
+    "react-dom": "catalog:uiPeerDeps",
+    "styled-components": "catalog:uiPeerDeps"
   },
   "devDependencies": {
     "@gobob/test-utils": "workspace:^",
@@ -91,10 +91,10 @@
     "@react-types/shared": "^3.19.0",
     "@react-types/tabs": "^3.3.2",
     "@types/react-transition-group": "^4.4.6",
-    "@types/styled-components": "^5.1.26",
+    "@types/styled-components": "catalog:",
     "clean-package": "^2.2.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "styled-components": "^6.0.8"
+    "react": "catalog:",
+    "react-dom": "catalog:",
+    "styled-components": "catalog:"
   }
 }
