--- a/apps/bob-pay/package.json
+++ b/apps/bob-pay/package.json
@@ -41,13 +41,12 @@
     "big.js": "catalog:",
     "date-fns": "catalog:",
     "graphql-request": "catalog:",
-    "negotiator": "^0.6.3",
+    "negotiator": "catalog:",
     "next": "catalog:",
     "permissionless": "^0.1.41",
     "react": "catalog:",
     "react-dom": "catalog:",
     "react-qr-code": "^2.0.12",
-    "sharp": "^0.33.5",
     "styled-components": "catalog:",
     "usehooks-ts": "catalog:",
     "viem": "catalog:",
@@ -61,7 +60,7 @@
     "@lingui/macro": "catalog:",
     "@lingui/swc-plugin": "catalog:",
     "@types/big.js": "catalog:",
-    "@types/negotiator": "^0.6.3",
+    "@types/negotiator": "catalog:",
     "@types/node": "catalog:",
     "@types/react": "catalog:",
     "@types/react-dom": "catalog:",
