--- a/apps/evm/package.json
+++ b/apps/evm/package.json
@@ -42,7 +42,7 @@
     "date-fns": "catalog:",
     "graphql-request": "catalog:",
     "lottie-react": "^2.4.0",
-    "negotiator": "^0.6.3",
+    "negotiator": "catalog:",
     "next": "catalog:",
     "react": "catalog:",
     "react-dom": "catalog:",
@@ -50,7 +50,6 @@
     "react-multi-carousel": "^2.8.5",
     "react-otp-input": "^3.1.1",
     "react-qr-code": "^2.0.12",
-    "sharp": "^0.33.5",
     "siwe": "^2.1.4",
     "styled-components": "catalog:",
     "use-count-up": "^3.0.1",
@@ -67,7 +66,7 @@
     "@lingui/macro": "catalog:",
     "@lingui/swc-plugin": "catalog:",
     "@types/big.js": "catalog:",
-    "@types/negotiator": "^0.6.3",
+    "@types/negotiator": "catalog:",
     "@types/node": "catalog:",
     "@types/react": "catalog:",
     "@types/react-dom": "catalog:",
