--- a/apps/evm/package.json
+++ b/apps/evm/package.json
@@ -22,6 +22,7 @@
     "@dynamic-labs/iconic": "^3.6.2",
     "@dynamic-labs/sdk-react-core": "^3.6.2",
     "@dynamic-labs/wagmi-connector": "^3.6.2",
+    "@dynamic-labs/wallet-book": "^3.8.5",
     "@gobob/bob-sdk": "^3.1.0",
     "@gobob/chains": "workspace:^",
     "@gobob/currency": "workspace:^",
@@ -46,6 +47,7 @@
     "@wagmi/core": "catalog:",
     "big.js": "catalog:",
     "bitcoin-address-validation": "catalog:",
+    "boring-avatars": "^1.11.2",
     "date-fns": "catalog:",
     "graphql-request": "catalog:",
     "lottie-react": "^2.4.0",
